{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 28,
  "lineage": "93edac9f-5670-be0c-a1db-6f6cc4c5965c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "xops_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:730335548636:instance/i-09c498e687057398d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09c498e687057398d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-035adffeabc17a957",
            "private_dns": "ip-10-0-1-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.153",
            "public_dns": "ec2-98-80-245-187.compute-1.amazonaws.com",
            "public_ip": "98.80.245.187",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06c0c7a1a9f644eae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dfcebd0a51e52b96",
            "tags": {
              "Name": "xops-webserver"
            },
            "tags_all": {
              "Name": "xops-webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-035dcf9d15292e614"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.xops_sg",
            "aws_subnet.xops_subnet",
            "aws_vpc.xops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "xops_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335548636:internet-gateway/igw-0da221c4fb97705b7",
            "id": "igw-0da221c4fb97705b7",
            "owner_id": "730335548636",
            "region": "us-east-1",
            "tags": {
              "Name": "xops-igw"
            },
            "tags_all": {
              "Name": "xops-igw"
            },
            "vpc_id": "vpc-065ead1430b854b8d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.xops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "xops_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335548636:route-table/rtb-02891471a35244529",
            "id": "rtb-02891471a35244529",
            "owner_id": "730335548636",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0da221c4fb97705b7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xops-rt"
            },
            "tags_all": {
              "Name": "xops-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-065ead1430b854b8d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.xops_igw",
            "aws_vpc.xops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "xops_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06902951a8fbddc39",
            "region": "us-east-1",
            "route_table_id": "rtb-02891471a35244529",
            "subnet_id": "subnet-0dfcebd0a51e52b96"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.xops_igw",
            "aws_route_table.xops_rt",
            "aws_subnet.xops_subnet",
            "aws_vpc.xops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "xops_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335548636:security-group/sg-035dcf9d15292e614",
            "description": "Allow HTTP and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035dcf9d15292e614",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "xops-sg",
            "name_prefix": "",
            "owner_id": "730335548636",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065ead1430b854b8d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335548636",
            "id": "sg-035dcf9d15292e614",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.xops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "xops_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335548636:subnet/subnet-0dfcebd0a51e52b96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfcebd0a51e52b96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335548636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "xops-subnet"
            },
            "tags_all": {
              "Name": "xops-subnet"
            },
            "vpc_id": "vpc-065ead1430b854b8d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335548636",
            "id": "subnet-0dfcebd0a51e52b96",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.xops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "xops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335548636:vpc/vpc-065ead1430b854b8d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-063c01ccf226d9aab",
            "default_route_table_id": "rtb-0c2008570737a1c90",
            "default_security_group_id": "sg-0474c3eae6235f21b",
            "dhcp_options_id": "dopt-022b716fe760ba59f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065ead1430b854b8d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c2008570737a1c90",
            "owner_id": "730335548636",
            "region": "us-east-1",
            "tags": {
              "Name": "xops-vpc"
            },
            "tags_all": {
              "Name": "xops-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}